--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v1
         with:
-          go-version: '^1.13.1'
-      - name: make build
-        run: make build
+          go-version: '1.13'
+      - run: make build
