--- a/make/.goreleaser.yml
+++ b/make/.goreleaser.yml
@@ -31,7 +31,7 @@ changelog:
     - Merge branch
 brews:
 - name: metactl
-  ids: metactl
+  ids: [metactl]
   github:
     owner: metamatex
     name: homebrew-taps
