--- a/make/.goreleaser.yml
+++ b/make/.goreleaser.yml
@@ -5,6 +5,18 @@ builds:
   id: metactl
   env:
   - CGO_ENABLED=0
+  goos:
+  - linux
+  - darwin
+  - windows
+  goarch:
+  - 386
+  - amd64
+  - arm
+  - arm64
+  ignore:
+  - goos: darwin
+    goarch: 386
 - main: ./metamate/cmd/metamate/main.go
   binary: metamate
   id: metamate
