--- a/make/.goreleaser.yml
+++ b/make/.goreleaser.yml
@@ -47,4 +47,4 @@ brews:
   commit_author:
     name: ppwfx
     email: ph.woerdehoff@gmail.com
-  homepage: "https://metamate.io/"
+  homepage: "https://metamate.io"
