--- a/metactl/.make/.goreleaser.yml
+++ b/metactl/.make/.goreleaser.yml
@@ -1,18 +1,27 @@
 project_name: metactl
-before:
-  hooks:
-    - go mod download
 builds:
-- main: ./cmd/metactl/main.go
-  env:
-  - CGO_ENABLED=0
+  - main: ./cmd/metactl/main.go
+    binary: metactl
+    id: metactl
+    env:
+      - CGO_ENABLED=0
+    goos:
+      - darwin
+    goarch:
+      - 386
+      - amd64
+      - arm
+      - arm64
+    ignore:
+      - goos: darwin
+        goarch: 386
 archives:
-- replacements:
-    darwin: Darwin
-    linux: Linux
-    windows: Windows
-    386: i386
-    amd64: x86_64
+  - replacements:
+      darwin: Darwin
+      linux: Linux
+      windows: Windows
+      386: i386
+      amd64: x86_64
 checksum:
   name_template: 'checksums.txt'
 snapshot:
@@ -21,7 +30,16 @@ changelog:
   sort: asc
   filters:
     exclude:
-    - '^docs:'
-    - '^test:'
-    - Merge pull request
-    - Merge branch
+      - '^docs:'
+      - '^test:'
+      - Merge pull request
+      - Merge branch
+brews:
+  - name: metactl
+    github:
+      owner: metamatex
+      name: homebrew-taps
+    commit_author:
+      name: ppwfx
+      email: ph.woerdehoff@gmail.com
+    homepage: "https://metamate.io"
