--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,11 +1,19 @@
-name: build
-on: [push]
+name: release
+on:
+  push:
+    tags:
+      - v*
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v1
         with:
           go-version: '1.13'
-      - run: make build
+      - uses: azure/docker-login@v1
+        with:
+          login-server: 'index.docker.io'
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - run: make release
