--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,6 +6,7 @@ jobs:
     steps:
       - run: curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
       - run: echo $PATH
+      - run: mv ./bin/goreleaser /usr/local/bin/goreleaser
       - run: goreleaser
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v1
