--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,6 +7,8 @@ jobs:
       - run: curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
       - run: echo $PATH
       - run: snapcraft --help
+      - run: snap install goreleaser --classic
+      - run: goreleaser
       - run: mv ./bin/goreleaser /usr/local/bin/goreleaser
       - run: goreleaser
       - uses: actions/checkout@v2
