--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,10 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
-      - run: echo $PATH
-      - run: snap install goreleaser --classic
-      - run: goreleaser
-      - run: mv ./bin/goreleaser /usr/local/bin/goreleaser
+      - run: export PATH=/bin:$PATH
       - run: goreleaser
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v1
