--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,4 +17,4 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - run: curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
-      - run: make release
+      - run: PATH=$GITHUB_WORKSPACE/bin:$PATH make release
