--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,4 +17,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - run: curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
-      - run: PATH=$GITHUB_WORKSPACE/bin:$PATH make release
+      - run: echo "::add-path::$GITHUB_WORKSPACE/bin"
+      - run: make release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
