--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,12 +13,11 @@ jobs:
           go-version: '1.13'
       - uses: azure/docker-login@v1
         with:
-          login-server: 'index.docker.io'
+          login-server: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - run: curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
       - run: echo "::add-path::$GITHUB_WORKSPACE/bin"
-
       - run: make release
         env:
           GITHUB_TOKEN: ${{ secrets.GORELEASE_GITHUB_TOKEN }}
