--- a/metactl.yaml
+++ b/metactl.yaml
@@ -1,14 +1,14 @@
 v0:
   gen:
     sdks:
-      - names: [go_httpjson_server]
+      - names: [go_httpjson_service]
         data:
           name: auth
           package: github.com/metamatex/metamatemono
         endpoints:
           names:
             or: [VerifyToken, AuthenticateClientAccount, PipeClientAccounts]
-      - names: [go_httpjson_server]
+      - names: [go_httpjson_service]
         data:
           name: mastodon
           package: github.com/metamatex/metamatemono
