--- a/metamate/pkg/v0/communication/server/explorer/public/manifest.json
+++ b/metamate/pkg/v0/communication/server/explorer/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "MetaMeta GraphQL Explorer",
+  "name": "Explore MetaMate with GraphQL",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "android-icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "logo_padded_512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
