--- a/.github/workflows/release-test.yaml
+++ b/.github/workflows/release-test.yaml
@@ -4,6 +4,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
+      - run: mkdir $GITHUB_WORKSPACE/bin
       - run: curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.17.0/bin/linux/amd64/kubectl > $GITHUB_WORKSPACE/bin/kubectl
       - run: chmod +x $GITHUB_WORKSPACE/bin/kubectl
       - run: echo "${{ secrets.METAMATE_ONE_KUBECONFIG }}" > $HOME/.kube/config
