--- a/.github/workflows/release-test.yaml
+++ b/.github/workflows/release-test.yaml
@@ -7,6 +7,7 @@ jobs:
       - run: mkdir $GITHUB_WORKSPACE/bin
       - run: curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.17.0/bin/linux/amd64/kubectl > $GITHUB_WORKSPACE/bin/kubectl
       - run: chmod +x $GITHUB_WORKSPACE/bin/kubectl
+      - run: mkdir $HOME/.kube
       - run: echo "${{ secrets.METAMATE_ONE_KUBECONFIG }}" > $HOME/.kube/config
       - run: echo "::add-path::$GITHUB_WORKSPACE/bin"
       - run: kubectl get pod -n default
