--- a/.github/workflows/release-test.yaml
+++ b/.github/workflows/release-test.yaml
@@ -12,3 +12,4 @@ jobs:
       - run: echo "::add-path::$GITHUB_WORKSPACE/bin"
       - run: kubectl get pod -n default
       - run: kubectl get pod
+      - run: echo hi
