--- a/.github/workflows/release-test.yaml
+++ b/.github/workflows/release-test.yaml
@@ -15,6 +15,6 @@ jobs:
       - run: kubectl version
       - run: $GITHUB_WORKSPACE/bin/kubectl
       - run: $GITHUB_WORKSPACE/bin/kubectl version
-      - run: ls -lah $GITHUB_WORKSPACE/bin/kubectl version
+      - run: ls -lah $GITHUB_WORKSPACE/bin/kubectl
       - run: which kubectl
       - run: echo hi
