--- a/.github/workflows/release-test.yaml
+++ b/.github/workflows/release-test.yaml
@@ -4,19 +4,11 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
+      - run: echo "::add-path::$GITHUB_WORKSPACE/bin"
       - run: mkdir $GITHUB_WORKSPACE/bin
       - run: curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.17.0/bin/linux/amd64/kubectl
-      - run: ls -lah
       - run: mv kubectl $GITHUB_WORKSPACE/bin/kubectl
       - run: chmod +x $GITHUB_WORKSPACE/bin/kubectl
       - run: mkdir $HOME/.kube
       - run: echo "${{ secrets.METAMATE_ONE_KUBECONFIG }}" > $HOME/.kube/config
-      - run: echo "::add-path::$GITHUB_WORKSPACE/bin"
-      - run: kubectl get pod -n default
-      - run: kubectl get pod
-      - run: kubectl version
-      - run: $GITHUB_WORKSPACE/bin/kubectl
-      - run: $GITHUB_WORKSPACE/bin/kubectl version
-      - run: ls -lah $GITHUB_WORKSPACE/bin/kubectl
-      - run: which kubectl
-      - run: echo hi
+      - run: (cd metamate && make deploy)
