--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,13 +7,26 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
+      - run: echo "::add-path::$GITHUB_WORKSPACE/bin"
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v1
         with:
           go-version: '1.13'
       - run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - run: curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
-      - run: echo "::add-path::$GITHUB_WORKSPACE/bin"
       - run: make release
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_GITHUB_TOKEN }}
+  deploy:
+    needs: [release]
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "::add-path::$GITHUB_WORKSPACE/bin"
+      - run: mkdir $GITHUB_WORKSPACE/bin
+      - uses: actions/checkout@v2
+      - run: curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.17.0/bin/linux/amd64/kubectl
+      - run: mv kubectl $GITHUB_WORKSPACE/bin/kubectl
+      - run: chmod +x $GITHUB_WORKSPACE/bin/kubectl
+      - run: mkdir $HOME/.kube
+      - run: echo "${{ secrets.METAMATE_ONE_KUBECONFIG }}" > $HOME/.kube/config
+      - run: (cd metamate && make deploy)
