--- a/metamate/deployments/kubernetes.yaml
+++ b/metamate/deployments/kubernetes.yaml
@@ -166,6 +166,7 @@ spec:
   selector:
     name: metamate
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 80
