--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,6 +7,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
+      - run: echo "::add-path::$GITHUB_WORKSPACE/bin"
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v1
         with:
