--- a/metamate/pkg/v0/communication/servers/explorer/public/manifest.json
+++ b/metamate/pkg/v0/communication/servers/explorer/public/manifest.json
@@ -3,20 +3,15 @@
   "name": "Explore MetaMate with GraphQL",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "/static/logo/blue/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "android-icon-192x192.png",
+      "src": "/static/logo/blue/android-icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
-    {
-      "src": "logo_padded_512x512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
   ],
   "start_url": ".",
   "display": "standalone",
