--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+      - run: npm install -g yarn
       - uses: actions/setup-go@v1
         with:
           go-version: '1.13'
+      - run: go get -u github.com/mjibson/esc
+      - run: (cd pkg/v0/communication/servers/explorer && yarn install)
       - run: make build
