--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,9 +9,15 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - run: npm install -g yarn
+      - run: |
+          echo "::set-env name=GOPATH::${{ github.workspace }}/go"
+          echo "::add-path::${{ github.workspace }}/go/bin"
       - uses: actions/setup-go@v1
         with:
           go-version: '1.13'
       - run: go get -u github.com/mjibson/esc
+      - run: ls -lah ${{ github.workspace }}/go/bin
+      - run: echo $PATH
+      - run: esc
       - run: (cd metamate/pkg/v0/communication/servers/explorer && yarn install)
       - run: make build
