--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,10 +8,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: echo "::add-path::$GITHUB_WORKSPACE/bin"
+      - uses: actions/setup-node@v1
+      - run: npm install -g yarn
+      - run: |
+          echo "::set-env name=GOPATH::${{ github.workspace }}/go"
+          echo "::add-path::${{ github.workspace }}/go/bin"
+          echo "::add-path::${{ github.workspace }}/bin"
       - uses: actions/setup-go@v1
         with:
           go-version: '1.13'
+      - run: go get -u github.com/mjibson/esc
+      - run: (cd metamate/pkg/v0/communication/servers/explorer && yarn install)
       - run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - run: curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
       - run: make release
