--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,8 +1,6 @@
 name: release
 on:
   push:
-    tags:
-      - v*
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -17,7 +15,7 @@ jobs:
       - uses: actions/setup-go@v1
         with:
           go-version: '1.13'
-      - run: go get -u github.com/mjibson/esc
+      - run: (cd / && go get -u github.com/mjibson/esc)
       - run: (cd metamate/pkg/v0/communication/servers/explorer && yarn install)
       - run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - run: curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
