--- a/.make/.goreleaser.yml
+++ b/.make/.goreleaser.yml
@@ -7,13 +7,13 @@ builds:
       - CGO_ENABLED=0
     goos:
       - darwin
-      - linux
-      - windows
+#      - linux
+#      - windows
     goarch:
-      - 386
+#      - 386
       - amd64
-      - arm
-      - arm64
+#      - arm
+#      - arm64
     ignore:
       - goos: darwin
         goarch: 386
@@ -24,16 +24,25 @@ builds:
       - CGO_ENABLED=0
     goos:
       - darwin
-      - linux
-      - windows
+#      - linux
+#      - windows
     goarch:
-      - 386
+#      - 386
       - amd64
-      - arm
-      - arm64
+#      - arm
+#      - arm64
     ignore:
       - goos: darwin
         goarch: 386
+archives:
+  - id: metactl
+    builds:
+      - metactl
+    name_template: "metactl_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}{{ if .Mips }}_{{ .Mips }}{{ end }}"
+  - id: metamate
+    builds:
+      - metamate
+    name_template: "metamate_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}{{ if .Mips }}_{{ .Mips }}{{ end }}"
 checksum:
   name_template: 'checksums.txt'
 snapshot:
