--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,19 +3,11 @@ on:
   push:
   pull_request:
 jobs:
-  testGeneric:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v1
         with:
           go-version: '1.13'
-      - run: (cd generic && make test)
-  testMetaMate:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v1
-        with:
-          go-version: '1.13'
-      - run: (cd metamate && make test)
+      - run: make test
