--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,4 +17,5 @@ jobs:
           go-version: '1.13'
       - run: go get -u github.com/mjibson/esc
       - run: (cd metamate/pkg/v0/communication/servers/explorer && yarn install)
+      - run: make prepare
       - run: make build
