--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,8 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+      - run: npm install -g yarn
+      - run: |
+          echo "::set-env name=GOPATH::${{ github.workspace }}/go"
+          echo "::add-path::${{ github.workspace }}/go/bin"
       - uses: actions/setup-go@v1
         with:
           go-version: '1.13'
+      - run: go get -u github.com/mjibson/esc
+      - run: (cd metamate/pkg/v0/communication/servers/explorer && yarn install)
       - run: make prepare
       - run: make test
