--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -3,7 +3,7 @@ on:
   push:
   pull_request:
 jobs:
-  release:
+  test-release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
