--- a/hackernews-svc/metactl.yaml
+++ b/hackernews-svc/metactl.yaml
@@ -1,7 +1,7 @@
 v0:
   gen:
     sdks:
-    - name: go_httpjson_service
+    - name: go-service
       args:
         name: hackernews
         package: github.com/metamatex/metamate/hackernews-svc
