--- a/metactl.yaml
+++ b/metactl.yaml
@@ -1,17 +1,17 @@
 v0:
   gen:
     sdks:
-      - name: go_httpjson_service
+      - name: go-service
         args:
           name: mastodon
           package: github.com/metamatex/metamate
         endpoints: [GetPostFeeds, GetSocialAccounts, GetPosts]
-      - name: go_httpjson_service
+      - name: go-service
         args:
           name: kubernetes
           package: github.com/metamatex/metamate
         endpoints: [GetServices]
-      - name: go_httpjson_client
+      - name: go-client
         args:
           package: github.com/metamatex/metamate
         endpoints:
