--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,5 +17,5 @@ jobs:
           go-version: '1.13'
       - run: go get -u github.com/mjibson/esc
       - run: (cd metamate/pkg/v0/communication/servers/explorer && yarn install)
-      - run: make generate
+      - run: make build
       - run: make test
